# s7

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: encode.rs  entity.rs  image.rs  io.rs  lib.rs  main.rs  read_png.rs  s7_image.rs  utils.rs
src/algorithm/: decode.rs  encode.rs  mod.rs  neighboring_coords.rs
src/serialization/: mod.rs  parse_error.rs  read.rs  write.rs
