[package]
name = "s7"
version = "0.1.0"
authors = ["Sawyer Herbst <sawyer.herbst@myparadigm.com>"]
edition = "2018"

[dependencies]
png = "0.16.8"
log = "0.4.11"
imageproc = "0.22.0"
image = "0.23.12"
clap = "2.33.3"
simplelog = "0.7.6"
byteorder = "1.3.4"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "benchmark"
harness = false